apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__response_cache__tests__insert-2.snap
---
source: apollo-router/src/plugins/response_cache/tests.rs
expression: response.response.headers().get(CACHE_CONTROL)
---
Some(
    "public",
)
