apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__response_cache__tests__insert.snap
---
source: apollo-router/src/plugins/response_cache/tests.rs
description: "Make sure everything is in status 'new' and we have all the entities and root fields"
expression: cache_keys
---
[
  {
    "key": "version:1.2:subgraph:user:type:Query:hash:231d7d6fe14cd5d71107fd5aba84c25c9463f54efa056d968678dfbd6c432e73:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
    "invalidationKeys": [
      "currentUser"
    ],
    "kind": {
      "rootFields": [
        "currentUser"
      ]
    },
    "subgraphName": "user",
    "subgraphRequest": {
      "query": "{ currentUser { activeOrganization { __typename id } } }"
    },
    "source": "subgraph",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "shouldStore": true,
    "data": {
      "data": {
        "currentUser": {
          "activeOrganization": {
            "__typename": "Organization",
            "id": "1"
          }
        }
      }
    },
    "warnings": []
  },
  {
    "key": "version:1.2:subgraph:orga:type:Organization:representation:f6e8c0c4f36d6c0d11330be52b76316559e0390ff75fd002ed3fa73f9b6470f7:hash:186961676d3ec37a9d9a9859d66b9fd01ba3df61f4aa6e74d8abe05254822cd5:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
    "invalidationKeys": [
      "organization",
      "organization-1"
    ],
    "kind": {
      "typename": "Organization",
      "entityKey": {
        "id": "1"
      }
    },
    "subgraphName": "orga",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { creatorUser { __typename id } } } }",
      "variables": {
        "representations": [
          {
            "id": "1",
            "__typename": "Organization"
          }
        ]
      }
    },
    "source": "subgraph",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "shouldStore": true,
    "data": {
      "data": {
        "creatorUser": {
          "__typename": "User",
          "id": 2
        }
      }
    },
    "warnings": []
  }
]
